# --
# CHANGES - change log of OTRS
# Copyright (C) 2001-2012 OTRS AG, http://otrs.org/
# --
# $Id: CHANGES,v 1.2155 2012/01/27 23:37:26 cg Exp $
# --
# This software comes with ABSOLUTELY NO WARRANTY. For details, see
# the enclosed file COPYING for license information (AGPL). If you
# did not receive this file, see http://www.gnu.org/licenses/agpl.txt.
# --

3.1.0.rc1 2012-02-??
 - 2012-01-27 Fixed bug#8145 - TicketFreeTime entries in search profiles don't get updated.
 - 2012-01-27 Fixed bug#2820 - Wide character in Syslog message causes Perl crash on utf8 systems.

3.1.0.beta5 2012-01-31
 - 2012-01-25 Fixed bug#7890 - Changed wording of config setting for RFC 5321 compliance.
 - 2012-01-24 Fixed bug#8068 - Corrected field & DynamicField preselection on TicketSplit.
 - 2012-01-24 Fixed bug#8115 - Richtext editor not show in customer interface after switching
    to Catalan frontend language.
 - 2012-01-23 Fixed bug#7994 - ACL: action-restrictions not possible for all ticket actions.
 - 2012-01-23 Fixed bug#7984 - Unable to select the output format of statistics.
 - 2012-01-23 Fixed bug#8136 - Browser Time Detection and time zone UTC generates warning in
    web server error log.
 - 2012-01-23 Fixed bug#8132 - Browser version message misleading when 'compatibility mode'
    is enabled in Internet Explorer.
 - 2012-01-23 Fixed bug#7916 - Address Book doesn't work correctly.
 - 2012-01-23 Fixed bug#8019 - Ticket customer info widget has unneeded scroll bars.
 - 2012-01-23 Fixed bug#8066 - TicketAcl with empy possible List for DynamicFields crashes.
 - 2012-01-20 Fixed bug#7495 - Cursor stands still in editor in IE 9.
 - 2012-01-20 Fixed bug#8129 - Ticket Unwatch may lead to errorscreen.
 - 2012-01-20 Updated Finnish translation file, thanks to Mikko Hynninen!
 - 2012-01-17 Fixed bug#8117 - Can't create ticket for newly created customer user.
 - 2012-01-16 Fixed bug#8094 - Typo In Ticket.pm.